cart fixes, grpc product and user improvements, some sql migrations in cart and product